--- a/OnToology/Ontology/auroral-cellTowerOntology.ttl/documentation/sections/description-en.html
+++ b/OnToology/Ontology/auroral-cellTowerOntology.ttl/documentation/sections/description-en.html
@@ -1,4 +1,3 @@
 <h2 id="desc" class="list">[Ontology Name]: Description <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-<span class="markdown">
-This is a placeholder text for the description of your ontology. The description should include an explanation and a diagram explaining how the classes are related, examples of usage, etc.</span>
 
+<span class="markdown">This ontology aims at modelling the cell-tower information for the AURORAL project.</span>
